--- a/style.css
+++ b/style.css
@@ -46,10 +46,10 @@ License URI: http://www.gnu.org/licenses/gpl.html
 	}
 	
 	body {
-		font-family: georgia, serif;
+		font-family: 'Source Sans Pro', sans-serif;
 		line-height: 1.5;
 		color: #333;
-		font-size: 100%;
+		font-size: 106.75%;
 	}
 	
 	.accessibility {
@@ -63,6 +63,19 @@ License URI: http://www.gnu.org/licenses/gpl.html
 		margin: 0 auto;
 		background-color: #FFF;
 		padding: 1.5em;
+	}
+	
+	.clearfix:before,
+	.clearfix:after {
+		content: ""; display: block;
+	}
+
+	.clearfix:after {
+		clear: both;
+	}
+
+	.clearfix {
+		zoom: 1;
 	}
 	
 	a:link {
@@ -88,7 +101,12 @@ License URI: http://www.gnu.org/licenses/gpl.html
 	h5,
 	h6,
 	dt {
-		font-family: 'Source Sans Pro', 'Open Sans', sans-serif;
+		font-family: 'Source Sans Pro', sans-serif;
+	}
+	
+	strong,
+	b {
+		font-weight: 600;
 	}
 	
 	blockquote {
@@ -136,12 +154,13 @@ License URI: http://www.gnu.org/licenses/gpl.html
 	
 	.secondary {
 		font-weight: normal;
-		font-family: 'Source Sans Pro', 'Open Sans', sans-serif;
+		font-family: 'Source Sans Pro', sans-serif;
 	}
 	
 	.primary {
 		font-size: 1.33333em;
 		padding-bottom: 1.5em;
+		font-style: italic;
 	}
 	
 	.next {
@@ -157,7 +176,7 @@ License URI: http://www.gnu.org/licenses/gpl.html
 		
 	.nav {
 		font-weight: normal;
-		font-family: 'Source Sans Pro', 'Open Sans', sans-serif;
+		font-family: 'Source Sans Pro', sans-serif;
 		margin-bottom: 0.75em;
 		padding-bottom: 0.75em;
 		border-bottom: 0.1875em solid #F1F1F1;
@@ -166,6 +185,8 @@ License URI: http://www.gnu.org/licenses/gpl.html
 		.nav li {
 			display: inline;
 			margin-right: 0.75em;
+			font-weight: 300;
+			text-transform: uppercase;
 		}
 		
 			.nav li img {
@@ -198,7 +219,7 @@ License URI: http://www.gnu.org/licenses/gpl.html
 			
 				.nav li.current-menu-item a {
 					color: #333;
-					border-bottom: 0.1875em solid #333;
+					border-bottom: 0.1875em solid #F1F1F1;
 				}
 			
 	.dagger {
@@ -207,7 +228,6 @@ License URI: http://www.gnu.org/licenses/gpl.html
 	
 	#content {
 		padding-bottom: 1.5em;
-		margin-bottom: 1.5em;
 	}
 	
 	.hentry p,
@@ -238,7 +258,7 @@ License URI: http://www.gnu.org/licenses/gpl.html
 	
 	.figcaption {
 		padding-bottom: 0.75em;
-		font-family: 'Source Sans Pro', 'Open Sans', sans-serif;
+		font-family: 'Source Sans Pro', sans-serif;
 	}
 	
 	.entry-content h1,
@@ -246,16 +266,19 @@ License URI: http://www.gnu.org/licenses/gpl.html
 		font-size: 1.16667em;
 		line-height: 1.2em;
 		padding: 0.7em 0 0.3em 0;
+		font-weight: 600;
 	}
 	
 	.entry-content h3 {
 		font-size: 1em;
 		line-height: 1.2em;
 		padding: 0.7em 0 0.3em 0;
+		font-weight: 600;
 	}
 	
 	.entry-content dt {
 		padding-top: 0.375em;
+		font-weight: 600;
 	}
 	
 	.entry-content li {
@@ -264,14 +287,14 @@ License URI: http://www.gnu.org/licenses/gpl.html
 	
 	.entry-content table {
 		width: 100%;
-		font-family: 'Source Sans Pro', 'Open Sans', sans-serif;
+		font-family: 'Source Sans Pro', sans-serif;
 		margin-bottom: 0.375em;
 		font-size: 0.83333em;
 	}
 	
 	.entry-content a:link {
 		color: #114F89;
-		text-decoration: underline;
+		border-bottom: 1px solid;
 	}
 	
 	.entry-content a:visited {
@@ -307,8 +330,13 @@ License URI: http://www.gnu.org/licenses/gpl.html
 			margin-bottom: 0.375em;
 		}
 		
+		.wp-caption a:link {
+			border: 0;
+		}
+		
 	.title {
-		font-family: 'Source Sans Pro', 'Open Sans', sans-serif;
+		font-family: 'Source Sans Pro', sans-serif;
+		font-weight: normal;
 		font-size: 1.16667em;
 	}
 	
@@ -326,6 +354,7 @@ License URI: http://www.gnu.org/licenses/gpl.html
 			font-size: 1em;
 			line-height: 1.2em;
 			padding: 0.2em 0 0.1em 0;
+			font-weight: 600;
 		}
 		
 		.slot-meta {
@@ -335,17 +364,19 @@ License URI: http://www.gnu.org/licenses/gpl.html
 		
 	.big-link {
 		margin-bottom: 1.5em;
-		font-family: 'Source Sans Pro', 'Open Sans', sans-serif;
+		font-family: 'Source Sans Pro', sans-serif;
 		font-size: 1.16667em;
 	}
 		
 	.site-footer {
 		padding: 0.375em 0 1.5em 0;
 		font-weight: normal;
-		font-family: 'Source Sans Pro', 'Open Sans', sans-serif;
+		font-family: 'Source Sans Pro', sans-serif;
 		font-size: 0.83333em;
 		border-top: 1px solid #F1F1F1;
 		clear: both;
+		font-weight: 300;
+		text-transform: uppercase;
 	}
 	
 		.site-footer li {
@@ -360,7 +391,7 @@ License URI: http://www.gnu.org/licenses/gpl.html
 @media screen and (min-width: 960px) {
 	
 	body {
-		font-size: 118.75%;
+		font-size: 125%;
 		margin: 0 auto;
 		background-color: #F1F1F1;
 	}
@@ -370,8 +401,8 @@ License URI: http://www.gnu.org/licenses/gpl.html
 	}
 	
 	.wrapper {
-		width: 30em;
-		max-width: 30em;
+		width: 26em;
+		max-width: 26em;
 		padding: 1.5em 4.5em 0.75em 4.5em;
 		margin: 0 auto;
 	}
@@ -381,16 +412,17 @@ License URI: http://www.gnu.org/licenses/gpl.html
 		padding-bottom: 0.75em;
 	}
 	
+	
 	.entry-content {
 		-moz-hyphens: auto;
 		-webkit-hyphens: auto;
 		hyphens: auto;
-		padding-bottom: 0.75em;
+		padding-bottom: 1.5em;
 	}
 	
 	.entry-content .bleed {
 		margin-left: -4.5em;
-		max-width: 39em !important;
+		max-width: 35em !important;
 	}
 	
 	.entry-content h1,
@@ -427,7 +459,7 @@ License URI: http://www.gnu.org/licenses/gpl.html
 		.nav li {
 			margin-right: 1.5em;
 			line-height: 3em;
-			font-weight: 600;
+			font-weight: 300;
 		}
 	
 			.nav li img {
@@ -450,7 +482,7 @@ License URI: http://www.gnu.org/licenses/gpl.html
 	}
 	
 	body {
-		font-family: 'Source Sans Pro', 'Open Sans', 'Libre Baskerville', georgia, cambria, 'Bitstream Charter', adobe-caslon-pro, 'Source Sans Pro', 'Open Sans',  calibri, 'lucida grande', sans-serif;
+		font-family: 'Source Sans Pro', calibri, 'lucida grande', sans-serif;
 		width: 66%;
 		margin: 1.2em auto;
 	}
@@ -458,7 +490,9 @@ License URI: http://www.gnu.org/licenses/gpl.html
 	.site-header,
 	.site-footer,
 	.accessibility,
-	.logo	{
+	.logo,
+	.nav,
+	.pagination {
 		display: none;
 	}
 	
