--- a/style.css
+++ b/style.css
@@ -177,16 +177,15 @@ License URI: http://www.gnu.org/licenses/gpl.html
 	.nav {
 		font-weight: normal;
 		font-family: ff-more-web-pro, 'Source Sans Pro', sans-serif;
-		margin-bottom: 0.75em;
+		margin-bottom: 1.5em;
 		padding-bottom: 0.75em;
 		border-bottom: 0.1875em solid #F1F1F1;
 	}
 	
 		.nav li {
 			display: inline;
-			margin-right: 0.75em;
-			font-weight: 300;
-			text-transform: uppercase;
+			margin-right:1.5em;
+			font-size: 0.91667em;
 		}
 		
 			.nav li img {
@@ -244,7 +243,7 @@ License URI: http://www.gnu.org/licenses/gpl.html
 	.entry-title {
 		font-size: 1.33333em;
 		line-height: 1.2em;
-		margin-bottom: 0.3em;
+		margin-bottom: 1.05em;
 		font-weight: 900;
 	}
 	
@@ -376,7 +375,6 @@ License URI: http://www.gnu.org/licenses/gpl.html
 		font-size: 0.83333em;
 		border-top: 1px solid #F1F1F1;
 		clear: both;
-		text-transform: uppercase;
 	}
 	
 		.site-footer li {
@@ -457,7 +455,7 @@ License URI: http://www.gnu.org/licenses/gpl.html
 	}
 	
 		.nav li {
-			margin-right: 1.5em;
+			font-size: 0.83333em;
 			line-height: 3em;
 		}
 	
@@ -481,7 +479,7 @@ License URI: http://www.gnu.org/licenses/gpl.html
 	}
 	
 	body {
-		font-family: ff-more-web-pro, 'Source Sans Pro', calibri, 'lucida grande', sans-serif;
+		font-family: ff-more-web-pro, georgia, serif;
 		width: 66%;
 		margin: 1.2em auto;
 	}
