--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 ﻿/*
 Theme Name: Klinik
 Theme URI: http://leonpaternoster.com/wp-themes/
-Description: My theme
-Version: 0.1
+Description: A simple one column blog theme
+Version: 0.2
 Author: Leon Paternoster
 Author URI: http://leonpaternoster.com
 Tags: white, flexible-width, microformats
@@ -46,7 +46,7 @@ License URI: http://www.gnu.org/licenses/gpl.html
 	}
 	
 	body {
-		font-family: ff-more-web-pro, georgia, serif;
+		font-family: georgia, serif;
 		line-height: 1.5;
 		color: #333;
 		font-size: 106.75%;
@@ -102,12 +102,7 @@ License URI: http://www.gnu.org/licenses/gpl.html
 	h5,
 	h6,
 	dt {
-		font-family: ff-more-web-pro, georgia, serif;
-	}
-	
-	strong,
-	b {
-		font-weight: 500;
+		font-family: 'Nimbus Sans L', 'Helvetica Neue', arial, sans-serif;
 	}
 	
 	blockquote {
@@ -161,7 +156,7 @@ License URI: http://www.gnu.org/licenses/gpl.html
 	
 	.secondary {
 		font-weight: normal;
-		font-family: ff-more-web-pro, georgia, serif;
+		font-family: 'Nimbus Sans L', 'Helvetica Neue', arial, sans-serif;
 	}
 	
 	.primary {
@@ -200,7 +195,7 @@ License URI: http://www.gnu.org/licenses/gpl.html
 		
 	.nav {
 		font-weight: normal;
-		font-family: ff-more-web-pro, georgia, serif;
+		font-family: 'Nimbus Sans L', 'Helvetica Neue', arial, sans-serif;
 		margin-bottom: 1.5em;
 		padding-bottom: 0.75em;
 		border-bottom: 0.1875em solid #F1F1F1;
@@ -219,13 +214,13 @@ License URI: http://www.gnu.org/licenses/gpl.html
 			}
 			
 			input[type="search"] {
-				font-family: ff-more-web-pro, georgia, serif;
+				font-family: georgia, serif;
 				padding: 0.15em 0.3em;
 				width: 17em;
 			}
 			
 			input[type="submit"] {
-				font-family: ff-more-web-pro, georgia, serif;
+				font-family: georgia, serif;
 				padding: 0.15em 0.3em;
 				cursor: pointer;
 			}
@@ -269,7 +264,6 @@ License URI: http://www.gnu.org/licenses/gpl.html
 		font-size: 1.33333em;
 		line-height: 1.2em;
 		margin-bottom: 1.05em;
-		font-weight: 900;
 	}
 	
 	.entry-meta p {
@@ -292,7 +286,7 @@ License URI: http://www.gnu.org/licenses/gpl.html
 	
 	.figcaption {
 		padding-bottom: 0.75em;
-		font-family: ff-more-web-pro, georgia, serif;
+		font-family: 'Nimbus Sans L', 'Helvetica Neue', arial, sans-serif;
 	}
 	
 	.entry-content h1,
@@ -301,7 +295,7 @@ License URI: http://www.gnu.org/licenses/gpl.html
 		font-size: 1.16667em;
 		line-height: 1.2em;
 		padding: 0.7em 0 0.3em 0;
-		font-weight: 500;
+		font-weight: normal;
 	}
 	
 	.entry-content h3,
@@ -309,13 +303,12 @@ License URI: http://www.gnu.org/licenses/gpl.html
 		font-size: 1em;
 		line-height: 1.2em;
 		padding: 0.7em 0 0.3em 0;
-		font-weight: 500;
-		font-style: normal;
+		font-weight: normal;
 	}
 	
 	.entry-content dt {
 		padding-top: 0.375em;
-		font-weight: 500;
+		font-weight: normal;
 	}
 	
 	.entry-content li {
@@ -372,7 +365,7 @@ License URI: http://www.gnu.org/licenses/gpl.html
 		}
 		
 	.title {
-		font-family: ff-more-web-pro, georgia, serif;
+		font-family: 'Nimbus Sans L', 'Helvetica Neue', arial, sans-serif;
 		font-weight: normal;
 		font-size: 1.16667em;
 	}
@@ -396,7 +389,7 @@ License URI: http://www.gnu.org/licenses/gpl.html
 			font-size: 1em;
 			line-height: 1.2em;
 			padding: 0.2em 0 0.1em 0;
-			font-weight: 500;
+			font-weight: normal;
 		}
 		
 		.slot-meta {
@@ -406,14 +399,14 @@ License URI: http://www.gnu.org/licenses/gpl.html
 		
 	.big-link {
 		margin-bottom: 1.5em;
-		font-family: ff-more-web-pro, georgia, serif;
+		font-family: 'Nimbus Sans L', 'Helvetica Neue', arial, sans-serif;
 		font-size: 1.16667em;
 	}
 		
 	.site-footer {
 		padding: 0.375em 0 1.5em 0;
 		font-weight: normal;
-		font-family: ff-more-web-pro, georgia, serif;
+		font-family: 'Nimbus Sans L', 'Helvetica Neue', arial, sans-serif;
 		font-size: 0.83333em;
 		border-top: 1px solid #F1F1F1;
 		clear: both;
@@ -444,6 +437,7 @@ License URI: http://www.gnu.org/licenses/gpl.html
 	.comment-form label {
 		display: block;
 		font-size: 0.83333em;
+		font-family: 'Nimbus Sans L', 'Helvetica Neue', arial, sans-serif
 	}
 	
 	#author,
@@ -458,7 +452,7 @@ License URI: http://www.gnu.org/licenses/gpl.html
 		border: 1px solid #CFCFCF;
 		font-size: 1.2em;
 		padding: 0.15em 0.3em;
-		font-family: ff-more-web-pro, georgia, serif;
+		font-family: georgia, serif;
 	}
 	
 	#comment {
@@ -466,7 +460,7 @@ License URI: http://www.gnu.org/licenses/gpl.html
 	}
 	
 	#submit {
-		font-family: ff-more-web-pro, georgia, serif;
+		font-family: georgia, serif;
 		padding: 0.15em 0.3em;
 		font-size: 1em;
 		cursor: pointer;
@@ -498,6 +492,9 @@ License URI: http://www.gnu.org/licenses/gpl.html
 		float: left;
 		margin-right: 0.375em;
 		border-radius: 50%;
+		max-height: 2em !important;
+		width: auto !important;
+		vertical-align: center;
 	}
 		
 	
@@ -517,8 +514,7 @@ License URI: http://www.gnu.org/licenses/gpl.html
 	}
 	
 	.wrapper {
-		width: 34em;
-		max-width: 40em;
+		max-width: 30em;
 		padding: 1.5em 4.5em 0.75em 4.5em;
 		margin: 0 auto;
 	}
@@ -549,7 +545,7 @@ License URI: http://www.gnu.org/licenses/gpl.html
 	
 	.entry-content .bleed {
 		margin-left: -4.5em;
-		max-width: 38.5em !important;
+		max-width: 39em !important;
 	}
 	
 	.entry-content h1,
@@ -614,7 +610,7 @@ License URI: http://www.gnu.org/licenses/gpl.html
 	}
 	
 	body {
-		font-family: ff-more-web-pro, georgia, serif;
+		font-family: georgia, serif;
 		width: 66%;
 		margin: 1.2em auto;
 	}
