--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 Theme Name: Klinik
 Theme URI: http://leonpaternoster.com/wp-themes/
 Description: A simple one column blog theme
-Version: 0.2
+Version: 0.3
 Author: Leon Paternoster
 Author URI: http://leonpaternoster.com
 Tags: white, flexible-width, microformats
@@ -46,10 +46,10 @@ License URI: http://www.gnu.org/licenses/gpl.html
 	}
 	
 	body {
-		font-family: georgia, serif;
+		font-family: 'Open Sans', calibri, sans-serif;
 		line-height: 1.5;
 		color: #333;
-		font-size: 106.75%;
+		font-size: 100%;
 	}
 	
 	.accessibility,
@@ -102,7 +102,7 @@ License URI: http://www.gnu.org/licenses/gpl.html
 	h5,
 	h6,
 	dt {
-		font-family: 'Nimbus Sans L', 'Helvetica Neue', arial, sans-serif;
+		font-family: 'Open Sans', calibri, sans-serif;
 	}
 	
 	blockquote {
@@ -156,7 +156,7 @@ License URI: http://www.gnu.org/licenses/gpl.html
 	
 	.secondary {
 		font-weight: normal;
-		font-family: 'Nimbus Sans L', 'Helvetica Neue', arial, sans-serif;
+		font-family: 'Open Sans', calibri, sans-serif;
 	}
 	
 	.primary {
@@ -194,11 +194,11 @@ License URI: http://www.gnu.org/licenses/gpl.html
 	}
 		
 	.nav {
-		font-weight: normal;
-		font-family: 'Nimbus Sans L', 'Helvetica Neue', arial, sans-serif;
+		font-family: 'Open Sans', calibri, sans-serif;
 		margin-bottom: 1.5em;
 		padding-bottom: 0.75em;
 		border-bottom: 0.1875em solid #F1F1F1;
+		text-transform: uppercase;
 	}
 	
 		.nav li {
@@ -214,13 +214,13 @@ License URI: http://www.gnu.org/licenses/gpl.html
 			}
 			
 			input[type="search"] {
-				font-family: georgia, serif;
+				font-family: 'Open Sans', calibri, sans-serif;
 				padding: 0.15em 0.3em;
 				width: 17em;
 			}
 			
 			input[type="submit"] {
-				font-family: georgia, serif;
+				font-family: 'Open Sans', calibri, sans-serif;
 				padding: 0.15em 0.3em;
 				cursor: pointer;
 			}
@@ -275,6 +275,12 @@ License URI: http://www.gnu.org/licenses/gpl.html
 		font-style: italic;
 	}
 	
+	.entry-content img,
+	.wp-caption {
+		max-width: 100% !important;
+		height: auto !important;
+	}
+	
 	.entry-content img {
 		max-width: 100% !important;
 		height: auto !important;
@@ -286,7 +292,7 @@ License URI: http://www.gnu.org/licenses/gpl.html
 	
 	.figcaption {
 		padding-bottom: 0.75em;
-		font-family: 'Nimbus Sans L', 'Helvetica Neue', arial, sans-serif;
+		font-family: 'Open Sans', calibri, sans-serif;
 	}
 	
 	.entry-content h1,
@@ -295,7 +301,7 @@ License URI: http://www.gnu.org/licenses/gpl.html
 		font-size: 1.16667em;
 		line-height: 1.2em;
 		padding: 0.7em 0 0.3em 0;
-		font-weight: normal;
+		font-weight: 600;
 	}
 	
 	.entry-content h3,
@@ -303,12 +309,12 @@ License URI: http://www.gnu.org/licenses/gpl.html
 		font-size: 1em;
 		line-height: 1.2em;
 		padding: 0.7em 0 0.3em 0;
-		font-weight: normal;
+		font-weight: 600;
 	}
 	
 	.entry-content dt {
 		padding-top: 0.375em;
-		font-weight: normal;
+		font-weight: 600;
 	}
 	
 	.entry-content li {
@@ -365,8 +371,8 @@ License URI: http://www.gnu.org/licenses/gpl.html
 		}
 		
 	.title {
-		font-family: 'Nimbus Sans L', 'Helvetica Neue', arial, sans-serif;
-		font-weight: normal;
+		font-family: 'Open Sans', calibri, sans-serif;
+		font-weight: 600;
 		font-size: 1.16667em;
 	}
 	
@@ -389,7 +395,7 @@ License URI: http://www.gnu.org/licenses/gpl.html
 			font-size: 1em;
 			line-height: 1.2em;
 			padding: 0.2em 0 0.1em 0;
-			font-weight: normal;
+			font-weight: 600;
 		}
 		
 		.slot-meta {
@@ -399,14 +405,14 @@ License URI: http://www.gnu.org/licenses/gpl.html
 		
 	.big-link {
 		margin-bottom: 1.5em;
-		font-family: 'Nimbus Sans L', 'Helvetica Neue', arial, sans-serif;
+		font-family: 'Open Sans', calibri, sans-serif;
 		font-size: 1.16667em;
 	}
 		
 	.site-footer {
 		padding: 0.375em 0 1.5em 0;
 		font-weight: normal;
-		font-family: 'Nimbus Sans L', 'Helvetica Neue', arial, sans-serif;
+		font-family: 'Open Sans', calibri, sans-serif;
 		font-size: 0.83333em;
 		border-top: 1px solid #F1F1F1;
 		clear: both;
@@ -437,7 +443,7 @@ License URI: http://www.gnu.org/licenses/gpl.html
 	.comment-form label {
 		display: block;
 		font-size: 0.83333em;
-		font-family: 'Nimbus Sans L', 'Helvetica Neue', arial, sans-serif
+		font-family: 'Open Sans', calibri, sans-serif
 	}
 	
 	#author,
@@ -452,7 +458,7 @@ License URI: http://www.gnu.org/licenses/gpl.html
 		border: 1px solid #CFCFCF;
 		font-size: 1.2em;
 		padding: 0.15em 0.3em;
-		font-family: georgia, serif;
+		font-family: 'Open Sans', calibri, sans-serif;
 	}
 	
 	#comment {
@@ -460,7 +466,7 @@ License URI: http://www.gnu.org/licenses/gpl.html
 	}
 	
 	#submit {
-		font-family: georgia, serif;
+		font-family: 'Open Sans', calibri, sans-serif;
 		padding: 0.15em 0.3em;
 		font-size: 1em;
 		cursor: pointer;
@@ -504,7 +510,7 @@ License URI: http://www.gnu.org/licenses/gpl.html
 @media screen and (min-width: 960px) {
 	
 	body {
-		font-size: 125%;
+		font-size: 106.75%;
 		margin: 0 auto;
 		background-color: #F1F1F1;
 	}
@@ -610,7 +616,7 @@ License URI: http://www.gnu.org/licenses/gpl.html
 	}
 	
 	body {
-		font-family: georgia, serif;
+		font-family: 'Open Sans', calibri, sans-serif;
 		width: 66%;
 		margin: 1.2em auto;
 	}
