--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 Theme Name: Klinik
 Theme URI: http://leonpaternoster.com/wp-themes/
 Description: A simple one column blog theme
-Version: 0.3
+Version: 0.4
 Author: Leon Paternoster
 Author URI: http://leonpaternoster.com
 Tags: white, flexible-width, microformats
@@ -53,7 +53,8 @@ License URI: http://www.gnu.org/licenses/gpl.html
 	}
 	
 	.accessibility,
-	.widescreen {
+	.widescreen,
+	.cat-item-all {
 		position: absolute !important;
 		clip: rect(1px 1px 1px 1px);
 		clip: rect(1px, 1px, 1px, 1px);
@@ -68,7 +69,8 @@ License URI: http://www.gnu.org/licenses/gpl.html
 	
 	.clearfix:before,
 	.clearfix:after {
-		content: ""; display: block;
+		content: "";
+		display: block;
 	}
 
 	.clearfix:after {
@@ -141,6 +143,23 @@ License URI: http://www.gnu.org/licenses/gpl.html
 		background-color: #FCFA74;
 	}
 	
+	input[type="search"] {
+		font-family: 'Open Sans', calibri, sans-serif;
+		padding: 0.15em 0.3em;
+		width: 17em;
+	}
+	
+	input[type="submit"] {
+		font-family: 'Open Sans', calibri, sans-serif;
+		padding: 0.15em 0.3em;
+		cursor: pointer;
+	}
+	
+	b,
+	strong {
+		font-weight: 600;
+	}
+	
 	.secondary,
 	.figcaption,
 	.wp-caption-text,
@@ -192,57 +211,90 @@ License URI: http://www.gnu.org/licenses/gpl.html
 		float: left;
 		width: 45%;
 	}
-		
-	.nav {
-		font-family: 'Open Sans', calibri, sans-serif;
+	
+	.site-header {
+		border-bottom: 0.1875em solid #F1F1F1;
 		margin-bottom: 1.5em;
 		padding-bottom: 0.75em;
-		border-bottom: 0.1875em solid #F1F1F1;
+		font-family: 'Open Sans', calibri, sans-serif;
 		text-transform: uppercase;
 	}
-	
-		.nav li {
-			display: inline;
-			margin-right:1.5em;
-			font-size: 0.91667em;
+		
+		.nav img {
+			max-height: 1.5em;
+			width: auto;
+			vertical-align: middle;
 		}
 		
-			.nav li img {
-				max-height: 1.5em;
-				width: auto;
-				vertical-align: middle;
+		.nav li {
+			border-top: 1px solid #F1F1F1;
+			padding: 0.75em 0;
+		}
+		
+			.nav li:last-child {
+				padding-top: 1.5em;
 			}
-			
-			input[type="search"] {
-				font-family: 'Open Sans', calibri, sans-serif;
-				padding: 0.15em 0.3em;
-				width: 17em;
+		
+		.nav li a:link,
+		.nav li a:visited {
+			color: #114F89;
+			display: block;
+		}
+		
+		.nav li a:hover,
+		.nav li a:focus,
+		.nav li a:active {
+			color: #AF0000;
+		}
+		
+			.nav li.current-menu-item a {
+				color: #333;
 			}
-			
-			input[type="submit"] {
-				font-family: 'Open Sans', calibri, sans-serif;
-				padding: 0.15em 0.3em;
-				cursor: pointer;
-			}
-			
-			.nav li a:link,
-			.nav li a:visited {
-				color: #114F89;
-			}
-			
-			.nav li a:hover,
-			.nav li a:focus,
-			.nav li a:active {
-				color: #AF0000;
-			}
-			
-				.nav li.current-menu-item a {
-					color: #333;
-					border-bottom: 0.1875em solid #F1F1F1;
-				}
 			
 	.dagger {
 		border-radius: 50%;
+	}
+	
+	.site-title {
+		float: left;
+		font-size: 1em;
+		line-height: 1.5em;
+	}
+	
+	.js #reveal {
+		clip: rect(0 0 0 0);
+		max-height: 0;
+		position: absolute;
+		display: block;
+		overflow: hidden;
+		zoom: 1;
+	}
+
+	#reveal.opened {
+		max-height: 9999em;
+		padding-bottom: 0.75em;
+	}
+	
+	#nav-toggle {
+		text-align: right;
+		display: block;
+		margin-bottom: 0.375em;
+		font-size: 1em;
+		line-height: 1.5em;
+		background-image: url('images/navicon.png');
+		background-repeat: no-repeat;
+		background-position: center right;
+		color: transparent;
+	}
+	
+	#s,
+	#searchsubmit {
+		font-size: 1em;
+		padding: 0.1875em;
+	}
+	
+	#s {
+		width: 75%;
 	}
 	
 	#content {
@@ -542,6 +594,11 @@ License URI: http://www.gnu.org/licenses/gpl.html
 		padding-bottom: 0.75em;
 	}
 	
+	#nav-toggle {
+		font-size: 1.5em;
+		line-height: 2em;
+	}
+	
 	.entry-content {
 		-moz-hyphens: auto;
 		-webkit-hyphens: auto;
@@ -581,26 +638,15 @@ License URI: http://www.gnu.org/licenses/gpl.html
 		font-size: 0.83333em;
 	}
 	
-	.nav {
-		padding-top: 1.5em;
-		margin-bottom: 1.5em;
+	.nav li {
+		font-size: 1em;
 	}
-	
-		.nav li {
-			font-size: 0.83333em;
-			line-height: 3em;
-		}
-	
-			.nav li img {
-				max-height: 3em;
-				width: auto;
-				vertical-align: middle;
-			}
-			
-			.nav li form {
-				display: inline;
-			}
-				
+
+		.nav img {
+			max-height: 3em;
+			width: auto;
+			vertical-align: middle;
+		}			
 					
 	
 } /* End widescreen query */
