--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ License URI: http://www.gnu.org/licenses/gpl.html
 	
 	.inner {
 		padding: 1.5em;
+		margin-top: 1.5em;
 		background-color: #FFF;
 	}
 	
